[package]
name = "twatch-idf-rs"
version = "0.1.0"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
incremental = true

[features]
native = ["esp-idf-sys/native"]

[dependencies]
# general
anyhow = {version = "1", features = ["backtrace"]}
mutex-trait = { version = "0.2" }
bitmask-enum = { version = "1.1" }
log = "0.4"

# platform
esp-idf-sys = { version = "0.30", features = ["binstart", "std"] }
esp-idf-svc = "0.36.9"
esp-idf-hal = "0.32.10"

# hal
embedded-hal = "=1.0.0-alpha.6"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2", features = ["unproven"] }
embedded-graphics = { version = "^0.7" }
embedded-graphics-framebuf = "0.0.2"
profont = { version = "^0.5" }
display-interface-spi = { version = "^0.4" }
shared-bus = { version = "^0.2", features = ["std"] }
accelerometer = { version = "^0.12" }

# drivers
bma423 = { git = "https://github.com/pyaillet/bma423-rs.git", features = ["accel"] }
mipidsi = { git = "https://github.com/almindor/mipidsi.git" }
axp20x = { git = "https://github.com/pyaillet/axp20x-rs.git" }
pcf8563 = { version = "^0.1" }
ft6x36 = { git = "https://github.com/pyaillet/ft6x36.git" }

[build-dependencies]
embuild = "0.28"
anyhow = "1"
