[package]
name = "twatch-idf-rs"
version = "0.1.0"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
incremental = true

[features]
native = ["esp-idf-sys/native"]

[dependencies]
# general
anyhow = {version = "1", features = ["backtrace"]}
mutex-trait = { version = "0.2" }
bitmask-enum = { version = "1.1" }
num_enum = { version = "0.5" }
log = "0.4"

# platform
esp-idf-sys = { version = "^0.31", features = ["binstart", "std", "native"] }
esp-idf-svc = { version = "^0.39", features = ["experimental"] }
esp-idf-hal = "^0.35"

# hal
embedded-svc = "^0.19"
embedded-hal = "=1.0.0-alpha.7"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2", features = ["unproven"] }
embedded-graphics = { version = "^0.7" }
embedded-graphics-framebuf = "0.0.2"
profont = { version = "^0.5" }
display-interface-spi = { version = "^0.4" }
shared-bus = { version = "^0.2", features = ["std"] }
accelerometer = { version = "^0.12" }

# drivers
bma423 = { version = "0.0.1" }
mipidsi = { git = "https://github.com/almindor/mipidsi.git" }
axp20x = { version = "0.0.1" }
pcf8563 = { version = "^0.1" }
#ft6x36 = { version = "^0.2" }
ft6x36 = { path = "../ft6x36-rs/", features = [ "event_process" ] }

[build-dependencies]
embuild = "0.28"
anyhow = "1"
